--- a/package.json
+++ b/package.json
@@ -7,15 +7,21 @@
     "test": "jest"
   },
   "dependencies": {
+    "firebase": "^6.0.4",
     "react": "16.3.1",
     "react-native": "0.55.4",
-    "react-native-navigation": "1.1.458"
+    "react-native-navigation": "1.1.458",
+    "react-redux": "^7.0.3",
+    "redux": "^4.0.1",
+    "redux-saga": "^1.0.2",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "babel-jest": "24.8.0",
     "babel-preset-react-native": "4.0.1",
     "jest": "24.8.0",
-    "react-test-renderer": "16.3.1"
+    "react-test-renderer": "16.3.1",
+    "redux-devtools": "^3.5.0"
   },
   "jest": {
     "preset": "react-native"
