--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "firebase": "^6.0.4",
+    "lodash": "^4.17.11",
     "react": "16.3.1",
     "react-native": "0.55.4",
     "react-native-navigation": "1.1.458",
