--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "babel-jest": "24.8.0",
+    "babel-plugin-module-resolver": "^3.2.0",
     "babel-preset-react-native": "4.0.1",
     "jest": "24.8.0",
     "react-test-renderer": "16.3.1",
