--- a/package.json
+++ b/package.json
@@ -21,7 +21,15 @@
     "babel-jest": "24.8.0",
     "babel-plugin-module-resolver": "^3.2.0",
     "babel-preset-react-native": "4.0.1",
+    "eslint": "5.3.0",
+    "eslint-config-airbnb": "17.1.0",
+    "eslint-config-prettier": "^4.3.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-react": "^7.11.0",
     "jest": "24.8.0",
+    "prettier": "^1.17.1",
     "react-test-renderer": "16.3.1",
     "redux-devtools": "^3.5.0"
   },
