--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "firebase": "^6.0.4",
     "lodash": "^4.17.11",
+    "prop-types": "^15.7.2",
+    "ramda": "^0.26.1",
     "react": "16.3.1",
     "react-native": "0.55.4",
     "react-native-navigation": "1.1.458",
@@ -21,13 +23,11 @@
     "babel-jest": "24.8.0",
     "babel-plugin-module-resolver": "^3.2.0",
     "babel-preset-react-native": "4.0.1",
+    "babel-eslint": "^8.2.6",
+    "babel-core": "^6.26.3",
     "eslint": "5.3.0",
-    "eslint-config-airbnb": "17.1.0",
-    "eslint-config-prettier": "^4.3.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.1",
-    "eslint-plugin-prettier": "^3.1.0",
-    "eslint-plugin-react": "^7.11.0",
+    "eslint-plugin-react": "^7.10.0",
+    "eslint-plugin-react-native": "^3.2.1",
     "jest": "24.8.0",
     "prettier": "^1.17.1",
     "react-test-renderer": "16.3.1",
