--- a/package.json
+++ b/package.json
@@ -16,15 +16,17 @@
     "react-native-navigation": "1.1.458",
     "react-redux": "^6.0.1",
     "redux": "^4.0.1",
+    "redux-persist": "4.10.2",
     "redux-saga": "^1.0.2",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "seamless-immutable": "7.1.3"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.6",
     "babel-jest": "24.8.0",
     "babel-plugin-module-resolver": "^3.2.0",
     "babel-preset-react-native": "4.0.1",
-    "babel-eslint": "^8.2.6",
-    "babel-core": "^6.26.3",
     "eslint": "5.3.0",
     "eslint-plugin-react": "^7.10.0",
     "eslint-plugin-react-native": "^3.2.1",
